--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -307,7 +307,7 @@
               <a class="nav-link" ng-class="{ active : tabsIndex == 1 }" ng-disabled="!showProductTable || !clienteValido" ng-click="goToTab(1)" >Detalle de pedido <span class="badge badge-secondary">2</span></a>
             </li>
             <li class="nav-item" ng-show="pedido.errores.length > 0">
-              <a class="nav-link" ng-class="{ active : tabsIndex == 2 }" ng-disabled="!showProductTable || !clienteValido" ng-click="goToTab(2)" >Errores<span class="badge badge-danger"></span></a>
+              <a class="nav-link" ng-class="{ active : tabsIndex == 2 }" ng-disabled="!showProductTable || !clienteValido" ng-click="goToTab(2)" >Errores<span class="badge badge-danger">3</span></a>
             </li>
         </ul>
 
