--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -195,7 +195,7 @@
                             <!-- <td><p class="text-right"><i ng-show="!x.alert" class="fas fa-1x fa-check"></i><i ng-show="x.alert"  class="fas fa-1x fa-times"></i>  </p></td> -->
                             <td >
 
-                              <button type="button" class="btn btn-danger" ng-click="removeDetalleProducto($index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
+                              <button type="button" class="btn btn-danger" ng-click="openModalDyn(3,$index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
                               <button type="button" class="btn btn-success" ng-click="editRow(x, $index);" ><i class="fa fa-edit" style="cursor: pointer;" ></i></button>
                             </td>
                           </tr>
@@ -451,7 +451,7 @@
                               <!-- <td><p class="text-right"><i ng-show="!x.alert" class="fas fa-1x fa-check"></i><i ng-show="x.alert"  class="fas fa-1x fa-times"></i>  </p></td> -->
                               <td >
 
-                                <button type="button" class="btn btn-danger" ng-disabled="!editView" ng-show="editView"  ng-click="removeDetalleProducto($index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
+                                <button type="button" class="btn btn-danger" ng-disabled="!editView" ng-show="editView"  ng-click="openModalDyn(3,$index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
                                 <button type="button" class="btn btn-success" ng-disabled="!editView" ng-show="editView" ng-click="editRow(x, $index);" ><i class="fa fa-edit" style="cursor: pointer;" ></i></button>
                               </td>
                             </tr>
