--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -55,21 +55,36 @@
   <div class="row" style="min-height:80vh">
 
     <div class="col-md-12 col-sm-12">
-      <br>
-      <h5 class="text-center"> <strong>CLIENTES</strong> </h5>
-      <br>
 
-      <div class="row">
-        <div class="col-md-12">
-		<table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
-			</table>
+      <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+          <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Clientes</li>
+        </ol>
+      </nav>
+
+      <div class="container-fluid">
+        <div class="col-md-12 mt-10 mb-10">
+          <div class="card " >
+            <div class="card-body">
+              <div class="col-md-12">
+                <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
+                </table>
+
+              </div>
+
+            </div>
+          </div>
+
+        </div>
 
       </div>
 
-    </div>
   </div>
 
 
+</div>
 </div>
 </div>
 <my-footer></my-footer>
