--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -800,7 +800,7 @@
         <nav aria-label="breadcrumb" role="navigation">
           <ol class="breadcrumb m-0">
             <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
-            <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li>
+            <li class="breadcrumb-item"><a class="text-info" href="#!/home">Inicio</a></li>
             <li class="breadcrumb-item active" aria-current="page">Pedidos</li>
           </ol>
         </nav>
