--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -108,47 +108,57 @@
 </div>
 
       <div class="row">
-        <div class="col-md-12">
-      <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
-      </table> -->
-      <button id="btnfacturaInfo" style="display:none" data-toggle="modal" data-target="#modalFactura"></button>
+        <div class="col-md-12 mt-10 mb-10">
+          <div class="card " >
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-12">
+                  <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
+                  </table> -->
+                  <button id="btnfacturaInfo" style="display:none" data-toggle="modal" data-target="#modalFactura"></button>
 
-          <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
-            <thead>
-                <tr>
-                  <th scope="col"><p class="text-center">#</p></th>
-                  <th scope="col"><p class="text-center">N° Pedido</p></th>
-                  <th scope="col"><p class="text-center">Fecha pedido</p></th>
-                  <th scope="col"><p class="text-center">Fecha factura</p></th>
-                  <th scope="col"><p class="text-center">Monto</p></th>
-                  <th scope="col"><p class="text-center">Monto usd</p></th>
-                  <th scope="col"><p class="text-center">Tipo pedido</p></th>
-                  <th scope="col"><p class="text-center">Nombre vendedor</p></th>
-                  <th scope="col"><p class="text-center">Email vendedor</p></th>
-                  <th scope="col"><p class="text-center">Opciones</p></th>
-                </tr>
-            </thead>
-            <tbody>
+                  <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
+                    <thead>
+                      <tr>
+                        <th scope="col"><p class="text-center">#</p></th>
+                        <th scope="col"><p class="text-center">N° Pedido</p></th>
+                        <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                        <th scope="col"><p class="text-center">Fecha factura</p></th>
+                        <th scope="col"><p class="text-center">Monto</p></th>
+                        <th scope="col"><p class="text-center">Monto usd</p></th>
+                        <th scope="col"><p class="text-center">Tipo pedido</p></th>
+                        <th scope="col"><p class="text-center">Nombre vendedor</p></th>
+                        <th scope="col"><p class="text-center">Email vendedor</p></th>
+                        <th scope="col"><p class="text-center">Opciones</p></th>
+                      </tr>
+                    </thead>
+                    <tbody>
 
-                <tr  ng-repeat="fact in facturas"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
-                  <td><p class="text-center">{{ $index + 1 }}</p></td>
-                  <td><p class="text-center">{{ fact }}</p></td>
-                  <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
-                  <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
-                  <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td>
-                  <td><p class="text-center">{{ facturasList[fact][0].total_producto_usd }}</p></td>
-                  <td><p class="text-center">{{ facturasList[fact][0].tipo_pedido }}</p></td>
-                  <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
-                  <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td>
-                  <td>
-                    <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
-                  </td>
-                </tr>
+                      <tr  ng-repeat="fact in facturas"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
+                        <td><p class="text-center">{{ $index + 1 }}</p></td>
+                        <td><p class="text-center">{{ fact }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].total_producto_usd }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].tipo_pedido }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
+                        <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td>
+                        <td>
+                          <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
+                        </td>
+                      </tr>
 
 
-            </tbody>
-            </table>
+                    </tbody>
+                  </table>
+                </div>
+
+              </div>
+            </div>
+            </div>
         </div>
+
 
       </div>
 
