--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -131,7 +131,7 @@
                         <th scope="col"><p class="text-center">Monto usd</p></th>
                         <th scope="col"><p class="text-center">Tipo pedido</p></th>
                         <th scope="col"><p class="text-center">Nombre vendedor</p></th>
-                        <th scope="col"><p class="text-center">Email vendedor</p></th>
+                        <!-- <th scope="col"><p class="text-center">Email vendedor</p></th> -->
                         <th scope="col"><p class="text-center">Opciones</p></th>
                       </tr>
                     </thead>
@@ -146,7 +146,7 @@
                         <td><p class="text-center">{{ facturasList[fact][0].total_producto_usd }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].tipo_pedido }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
-                        <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td>
+                        <!-- <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
                         <td>
                           <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
                         </td>
