--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -126,6 +126,7 @@
                         <th scope="col"><p class="text-center">#</p></th>
                         <th scope="col"><p class="text-center">N° Pedido</p></th>
                         <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                        <th scope="col"><p class="text-center">N° factura</p></th>
                         <th scope="col"><p class="text-center">Fecha factura</p></th>
                         <th scope="col"><p class="text-center">Monto</p></th>
                         <th scope="col"><p class="text-center">Monto usd</p></th>
@@ -141,6 +142,7 @@
                         <td><p class="text-center">{{ $index + 1 }}</p></td>
                         <td><p class="text-center">{{ fact }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].nro_pedido }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].total_producto_usd }}</p></td>
