--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -142,7 +142,7 @@
                         <td><p class="text-center">{{ $index + 1 }}</p></td>
                         <td><p class="text-center">{{ fact }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
-                        <td><p class="text-center">{{ facturasList[fact][0].nro_pedido }}</p></td>
+                        <td><p class="text-center">{{ facturasList[fact][0].nro_factura }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].total_producto_usd }}</p></td>
