--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -27,11 +27,13 @@
                         <th scope="col"><p class="text-center">#</p></th>
                         <th scope="col"><p class="text-center">Nombre articulo</p></th>
                         <th scope="col"><p class="text-center">Unidades pedido</p></th>
+                        <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                        <th scope="col"><p class="text-center">Fecha factura</p></th>
                         <th scope="col"><p class="text-center">Unidades facturadas</p></th>
                         <!-- <th scope="col"><p class="text-center">Nombre Vendedor</p></th>
                         <th scope="col"><p class="text-center">Email Vendedor</p></th> -->
-                        <th scope="col"><p class="text-center">Fecha factura</p></th>
-                        <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                        <th scope="col"><p class="text-center">Monto bs</p></th>
+                        <th scope="col"><p class="text-center">Monto usd</p></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -40,12 +42,15 @@
 
                             <td><p class="text-center">{{ $index + 1 }}</p></td>
                             <td><p class="text-center">{{ x.nombre_arti }}</p></td>
+                            <td><p class="text-right">{{  x.fecha_pedido }}</p></td>
+                            <td><p class="text-right">{{  x.fecha_factura }}</p></td>
                             <td><p class="text-center">{{ x.unidades_pedido }}</p></td>
                             <td><p class="text-center">{{ x.unidades_facturadas }}</p></td>
                             <!-- <td><p class="text-right">{{  x.nombre_vendedor }}</p></td>
                             <td><p class="text-right">{{  x.email_vendedor }}</p></td> -->
-                            <td><p class="text-right">{{  x.fecha_factura }}</p></td>
-                            <td><p class="text-right">{{  x.fecha_pedido }}</p></td>
+
+                            <td><p class="text-center">{{ x.total_producto }}</p></td>
+                            <td><p class="text-center">{{ x.total_producto_usd }}</p></td>
                         </tr>
 
 
