--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -149,8 +149,8 @@
                         <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].nro_factura }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
-                        <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td>
-                        <td><p class="text-center">{{ facturasList[fact][0].total_producto_usd }}</p></td>
+                        <td><p class="text-center">{{ facturasTotales[fact].total_bs }}</p></td>
+                        <td><p class="text-center">{{ facturasTotales[fact].total_usd }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].tipo_pedido }}</p></td>
                         <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
                         <!-- <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
