--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -18,8 +18,8 @@
             <p class="mb-1"><span class="text-muted">RIF: </span> {{client_info.docu_identif_cliente}}</p>
             <p class="mb-1"> <span class="text-muted">Direccion Fiscal: </span> {{client_info.direccion_cliente.toLowerCase()}}</p>
             <p class="mb-1"><span class="text-muted">Zona: </span>{{client_info.zona}}</p>
-            <p class="mb-1"><span class="text-muted">Telefono: </span>{{client_info.telefono1}}</p>
-            <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client_info.nombre_encargado.toLowerCase()}}</p>
+            <!-- <p class="mb-1"><span class="text-muted">Telefono: </span>{{client_info.telefono1}}</p> -->
+            <!-- <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client_info.nombre_encargado.toLowerCase()}}</p> -->
           </div>
         </div>
       </div>
