--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -231,7 +231,7 @@
                         </thead>
                         <tbody>
 
-                          <tr  ng-repeat="x in listFact"   >
+                          <tr  ng-repeat="x in vencimiento"   >
                             <td><p class="text-center">{{ x.no_fisico }}</p></td>
                             <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
                             <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
