--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -49,8 +49,11 @@
                             <!-- <td><p class="text-right">{{  x.nombre_vendedor }}</p></td>
                             <td><p class="text-right">{{  x.email_vendedor }}</p></td> -->
 
-                            <td><p class="text-center">{{ formato(2,parseFloat(x.total_producto) * parseInt(x.unidades_facturadas) ) }}</p></td>
-                            <td><p class="text-center">{{ formato(2,parseFloat(x.total_producto_usd) * parseInt(x.unidades_facturadas) ) }}</p></td>
+                            <td><p class="text-center">{{ calculaMontoLinea (x.total_producto, x.unidades_facturadas, 2)  }}</p></td>
+                            <td><p class="text-center">{{ calculaMontoLinea (x.total_producto_usd, x.unidades_facturadas, 3)  }}</p></td>
+
+                            <!-- <td><p class="text-center">{{ x.total_producto}}</p></td>
+                            <td><p class="text-center">{{ x.total_producto_usd }}</p></td> -->
                         </tr>
 
 
