--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-<div id="wrapper" class="">
+<div id="wrapper" class="toggled">
   <my-sidebar></my-sidebar>
   <div id="page-content-wrapper" class="container-fluid">
 
