--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -2,7 +2,7 @@
 
 </div>
 
-<div id="wrapper" class="">
+<div id="wrapper" class="toggled">
 
   <my-sidebar></my-sidebar>
   <div  id="page-content-wrapper" class="container-fluid">
@@ -23,6 +23,9 @@
         </nav>
 
         <div class="container-fluid">
+
+            <!-- <button type="button" class="btn btn-primary" ng-click="numeroChang()" ></button>
+          <header-client  numero="numero"  ></header-client> -->
 
           <div class="card " >
             <div class="card-body">
