--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -786,7 +786,7 @@
   </div>
 </div>
 
-<div id="wrapper" class="">
+<div id="wrapper" class="toggled">
 
   <my-sidebar></my-sidebar>
   <div id="page-content-wrapper" class="container-fluid">
@@ -804,8 +804,8 @@
             <li class="breadcrumb-item active" aria-current="page">Pedidos</li>
           </ol>
         </nav>
-
-        <header-client></header-client>
+      
+        <header-client  numero="numero"  ></header-client>
 
         <div ng-show="!hasUserClient">
           <div class="row" style="margin-bottom: 15px;">
