--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -1,10 +1,15 @@
 <div class="" ng-show="hasUserClient">
 
 <div class="col-md-12">
-
+  <div class="user" >
+  <!-- <h2>{{$ctrl.numero}})</h2>
+  Nombre: {{$ctrl.usuario.name}}
+  <br>
+  Email: {{$ctrl.usuario.email}}
+</div> -->
   <div class="alert alert-danger"  ng-show="!clienteValido" role="alert">
     Advertencia:
-    <strong>{{clientInvalidoMsg}}</strong>
+    <strong>{{clientInvalidoMsg}} </strong>
   </div>
 </div>
 
@@ -12,12 +17,20 @@
 
       <div class="col-md-6">
         <div class="card card-min " >
-          <div class="card-body">
-            <h5 class="card-title">Informacion del Cliente </h5>
+          <div class="card-info-header">
+            Informacion del Cliente
+
+            <button type="button" class="close"  aria-label="Close" data-toggle="collapse" data-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+              <span aria-hidden="true">-</span>
+            </button>
+          </div>
+          <div class="card-body collapse" id="collapseInfo"  >
+
+            <!-- <h6 class="card-title">Informacion del Cliente </h6> -->
             <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client_info.nombre_cliente}}</p>
             <p class="mb-1"><span class="text-muted">RIF: </span> {{client_info.docu_identif_cliente}}</p>
             <p class="mb-1"> <span class="text-muted">Direccion Fiscal: </span> {{client_info.direccion_cliente.toLowerCase()}}</p>
-            <p class="mb-1"><span class="text-muted">Zona: </span>{{client_info.zona}}</p>
+            <!-- <p class="mb-1"><span class="text-muted">Zona: </span>{{client_info.zona}}</p> -->
             <!-- <p class="mb-1"><span class="text-muted">Telefono: </span>{{client_info.telefono1}}</p> -->
             <!-- <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client_info.nombre_encargado.toLowerCase()}}</p> -->
           </div>
@@ -26,8 +39,16 @@
       <div class="col-md-6">
 
         <div class="card card-min" >
-          <div class="card-body">
-            <h5 class="card-title">Detalles</h5>
+          <div class="card-info-header">
+            Detalles del Cliente
+
+            <button type="button" class="close" aria-label="Close" data-toggle="collapse" data-target="#collapseDetalle" aria-expanded="false" aria-controls="collapseDetalle">
+              <span aria-hidden="true">-</span>
+            </button>
+          </div>
+          <div class="card-body  collapse " id="collapseDetalle" >
+
+            <!-- <h6 class="card-title">Detalles del Cliente</h6> -->
             <p class="mb-1"><span class="text-muted">Codigo: </span> {{client_info.cod_cliente}}</p>
             <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client_info.tipo_venta}}</p>
             <p class="mb-1"><span class="text-muted">Plazo: </span> {{client_info.v_plazo}} dias</p>
