--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -75,7 +75,7 @@
 </div>
 </div>
 
-<div id="wrapper" class="">
+<div id="wrapper" class="toggled">
   <my-sidebar></my-sidebar>
 
   <div id="page-content-wrapper" class="container-fluid">
@@ -226,7 +226,7 @@
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Saldo BS</p></th>
                             <th scope="col"><p class="text-center">Saldo Usd</p></th>
-                            <th scope="col"><p class="text-center">Tipo documento</p></th>
+                            <!-- <th scope="col"><p class="text-center">Tipo documento</p></th> -->
                           </tr>
                         </thead>
                         <tbody>
@@ -234,9 +234,9 @@
                           <tr  ng-repeat="x in vencimiento"   >
                             <td><p class="text-center">{{ x.no_fisico }}</p></td>
                             <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
-                            <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
-                            <td><p class="text-center">{{ formato(1,x.monto_actual_usd) }}</p></td>
-                            <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
+                            <td><p class="text-center">{{ formato(2,x.saldo) }}</p></td>
+                            <td><p class="text-center">{{ formato(1,x.saldo_usd) }}</p></td>
+                            <!-- <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td> -->
                           </tr>
 
 
